[package]
name = "envcfg"
version = "0.1.0"
autotests = false
edition = "2024"
publish = true

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tester.rs"

[dev-dependencies]
trybuild = { version = "1.0.110", features = ["diff"] }

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.106", features = ["extra-traits"] }
