[package]
name = "envcfg"
version = "0.0.1"
autotests = false
description = "A Rust crate for environment configuration management."
license = "Apache-2.0"
license-file = "../LICENSE"
documentation = "https://docs.rs/envcfg"
homepage = "https://github.com/prashant1k99/envcfg"
repository = "https://github.com/prashant1k99/envcfg"
edition = "2024"
publish = true

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tester.rs"

[dev-dependencies]
trybuild = { version = "1.0.110", features = ["diff"] }

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.106", features = ["extra-traits"] }
